--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am studying to become a web developer!</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Queens, New York</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Catching Pokemon and learning new things</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Developing a product that saves lives or the environment</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Orlando, Florida</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to have a skill set that is in demand and have an impact on the world around me</p>
     </section>
 
     <footer id="footer">
